--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,36 @@ services:
     volumes: 
       - ./api:/app
       - /app/node_modules
+  users1:
+    build:
+      context: users
+    environment:
+      PORT: 4001
+    ports:
+      - 4001:4001
+    restart: on-failure
+    volumes: 
+      - ./users:/app
+      - /app/node_modules
+  users2:
+    build:
+      context: users
+    environment:
+      PORT: 4002
+    ports:
+      - 4002:4002
+    restart: on-failure
+    volumes: 
+      - ./users:/app
+      - /app/node_modules
+  users3:
+    build:
+      context: users
+    environment:
+      PORT: 4003
+    ports:
+      - 4003:4003
+    restart: on-failure
+    volumes: 
+      - ./users:/app
+      - /app/node_modules
